# tensorrt-cpp-api

./: .gitignore  CMakeLists.txt  README.md
include/: cmd_line_util.h  config.h  engine.h  hungarian.h  kalman_tracker.h  object_tracking.h  sort.h  structs.h  yolov8.h
include/util/: Util.h  Util.inl
src/: benchmark.cpp  hungarian.cpp  kalman_tracker.cpp  object_detection_image.cpp  object_detection_video_stream.cpp  object_tracking.cpp  sort.cpp
tests/: test_hungarian.cpp  test_kalman_tracker.cpp
